<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="0dp"
    >


    <EditText
        android:id="@+id/mNombre"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mMargenFormulario"
        android:layout_marginLeft="@dimen/mMargenFormulario"
        android:layout_marginRight="@dimen/mMargenFormulario"
        android:hint="@string/mHintNombre"
        android:gravity="center"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/separacion"/>

    <EditText
        android:id="@+id/mFecha"
        android:drawableStart="@drawable/ic_date"
        android:drawablePadding="@dimen/paddingIcon"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mMargenFormulario"
        android:layout_marginLeft="@dimen/mMargenFormulario"
        android:layout_marginRight="@dimen/mMargenFormulario"
        android:hint="@string/mHintNombre"
        android:onClick="clickFecha"
        />


    <EditText
    android:id="@+id/mTelefono"
        android:fontFamily="casual"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="@dimen/paddingIcon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/mMargenFormulario"
    android:layout_marginLeft="@dimen/mMargenFormulario"
    android:layout_marginRight="@dimen/mMargenFormulario"
    android:hint="@string/mHintTelefono"
        android:ems="10"
        android:inputType="number"
    />

    <EditText
        android:id="@+id/mEmail"
        android:fontFamily="casual"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/paddingIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mMargenFormulario"
        android:layout_marginLeft="@dimen/mMargenFormulario"
        android:layout_marginRight="@dimen/mMargenFormulario"
        android:hint="@string/mHintEmail"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/mDescripcion"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mMargenFormulario"
        android:layout_marginLeft="@dimen/mMargenFormulario"
        android:layout_marginRight="@dimen/mMargenFormulario"
        android:hint="@string/mHintDescripcion"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/mButton"
        android:fontFamily="casual"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btmAltura"
        android:text="@string/btmText"
        android:textSize="@dimen/btmTextSize"
        android:textAllCaps="false"
        />

</LinearLayout>